fix(layout): image links

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/img/Star-Wars-Battlefront-II-combat.jpg" class="d-block w-100" alt="...">
+                        <img src="img/Star-Wars-Battlefront-II-combat.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <div class="carousel-caption__content-wrapper d-flex">
                                 <div class="carousel-caption__content">
@@ -140,7 +140,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/img/CallOfDuty.jpg" class="d-block w-100" alt="...">
+                        <img src="img/CallOfDuty.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <div class="carousel-caption__content-wrapper d-flex">
                                 <div class="carousel-caption__content">
