--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xbox</title>
     <!------------favicon-------------->
-
+    <link type="image/x-icon" rel="shortcut icon" href="favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#787878">
+    <meta name="theme-color" content="#ffffff">
     <!------------/favicon------------->
     <script defer src="js/main.js"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
     <link rel="stylesheet" href="css/style.css">
 </head>
-<header class="header" style="background-color: #373A3C ;">
+<header class="header">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
@@ -299,15 +305,107 @@
             </div>
         </div>
     </section>
-    <section class="section-default">
-        <div class="container"></div>
+    <section class="section-default section-exclusive">
+        <div class="container">
+            <div class="row">
+                <h2 class="section-title section-exclusive__title">
+                    Exclusive games on XBOX
+                </h2>
+
+                <div class="section-exclusive__item col-lg-3 col-sm-12">
+                    <div class="exclusive-card">
+                        <div class="exclusive-card__top">
+                            <figure class="exclusive-card__figure">
+                                <img src="img/img (3).jpg" alt="CallOfDuty: MW-II" class="exclusive-card__img">
+                            </figure>
+
+                        </div>
+                        <div class="exclusive-card__bottom">
+                            <h3 class="exclusive-card__title">
+                                Call of Duty: WWII
+                            </h3>
+                            <p class="exclusive-card__text">
+                                The C.O.D.E. Bravery Pack
+                                is now available in WWII
+                            </p>
+                            <button class="btn btn-brand exclusive-card__btn">
+                                See&nbsp;Details
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="section-exclusive__item col-lg-3 col-sm-12">
+                    <div class="exclusive-card">
+                        <div class="exclusive-card__top">
+                            <figure class="exclusive-card__figure">
+                                <img src="img/img (2).jpg" alt="Destiny 2" class="exclusive-card__img">
+                            </figure>
+
+                        </div>
+                        <div class="exclusive-card__bottom">
+                            <h3 class="exclusive-card__title">
+                                Destiny 2
+                            </h3>
+                            <p class="exclusive-card__text">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            </p>
+                            <button class="btn btn-brand exclusive-card__btn">
+                                See&nbsp;Details
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="section-exclusive__item col-lg-3 col-sm-12">
+                    <div class="exclusive-card">
+                        <div class="exclusive-card__top">
+                            <figure class="exclusive-card__figure">
+                                <img src="img/img (1).jpg" alt="STEEP" class="exclusive-card__img">
+                            </figure>
+
+                        </div>
+                        <div class="exclusive-card__bottom">
+                            <h3 class="exclusive-card__title">
+                                STEEP
+                            </h3>
+                            <p class="exclusive-card__text">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            </p>
+                            <button class="btn btn-brand exclusive-card__btn">
+                                See&nbsp;Details
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="section-exclusive__item col-lg-3 col-sm-12">
+                    <div class="exclusive-card">
+                        <div class="exclusive-card__top">
+                            <figure class="exclusive-card__figure">
+                                <img src="img/img.jpg" alt="Forza Motorsport 7" class="exclusive-card__img">
+                            </figure>
+
+                        </div>
+                        <div class="exclusive-card__bottom">
+                            <h3 class="exclusive-card__title">
+                                Forza Motorsport 7
+                            </h3>
+                            <p class="exclusive-card__text">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            </p>
+                            <button class="btn btn-brand exclusive-card__btn">
+                                See&nbsp;Details
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <section class="section-default">
         <div class="container"></div>
     </section>
     <footer class="footer">
         <div class="container">
-            
+
         </div>
     </footer>
 </main>
@@ -323,6 +421,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
