feat(layout): section-design
section-design layout complete

--- a/index.html
+++ b/index.html
@@ -400,8 +400,30 @@
             </div>
         </div>
     </section>
-    <section class="section-default">
-        <div class="container"></div>
+    <section class="section-default section-design">
+        <div class="container">
+            <div class="row">
+                
+                <div class="col-lg-5 col-sm-12">
+                  <div class="section-design__content">
+                    <h2 class="section-title section-design__title">
+                        Xbox Design Lab
+                    </h2>
+                    <p class="section-design__descr">
+                        Make yours one in a billion with new colors, metallic finishes and rubberized grips.
+                    </p>
+                    <div class="section-design__button-wrapper d-flex justify-content-between">
+                        <button class="btn btn-gray section-design__btn">
+                            Design Yours
+                        </button>
+                        <button class="btn btn-brand section-design__btn section-design__btn_right">
+                            Explore Consoles &amp;&nbsp;Accessories
+                        </button>
+                    </div>
+                  </div>  
+                </div>
+            </div>
+        </div>
     </section>
     <footer class="footer">
         <div class="container">
