--- a/index.html
+++ b/index.html
@@ -73,19 +73,20 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            
+
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                     Games
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li><a class="dropdown-item" href="#">Star Wars Battlefront II</a></li>
+                                    <li><a class="dropdown-item" href="#">Call of Duty: WWII</a></li>
+                                    <li><a class="dropdown-item" href="#">Assassin's Creed Rogue</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="#">All games</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
@@ -327,7 +328,7 @@
                         Exclusive games on XBOX
                     </h2>
 
-                    <div class="section-exclusive__item col-lg-3 col-sm-12">
+                    <div class="section-exclusive__item col-lg-3 col-md-6 col-sm-12">
                         <div class="exclusive-card">
                             <div class="exclusive-card__top">
                                 <figure class="exclusive-card__figure">
@@ -349,7 +350,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="section-exclusive__item col-lg-3 col-sm-12">
+                    <div class="section-exclusive__item col-lg-3 col-md-6 col-sm-12">
                         <div class="exclusive-card">
                             <div class="exclusive-card__top">
                                 <figure class="exclusive-card__figure">
@@ -370,7 +371,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="section-exclusive__item col-lg-3 col-sm-12">
+                    <div class="section-exclusive__item col-lg-3 col-md-6 col-sm-12">
                         <div class="exclusive-card">
                             <div class="exclusive-card__top">
                                 <figure class="exclusive-card__figure">
@@ -391,7 +392,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="section-exclusive__item col-lg-3 col-sm-12">
+                    <div class="section-exclusive__item col-lg-3 col-md-6 col-sm-12">
                         <div class="exclusive-card">
                             <div class="exclusive-card__top">
                                 <figure class="exclusive-card__figure">
@@ -552,16 +553,16 @@
                         </small>
                     </div>
                     <div class="footer__bottom-right">
+                        
+                        <small class="footer__small">
+                            &copy;&nbsp;Microsoft 2023
+                        </small>
                         <p>
                             <a href="http://jigsaw.w3.org/css-validator/check/referer">
                                 <img style="border:0;width:88px;height:31px"
-                                    src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-                                    alt="Правильный CSS!" />
-                                </a>
-                            </p>
-                        <small class="footer__small">
-                            &copy;&nbsp;Microsoft 2017
-                        </small>
+                                    src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Правильный CSS!" />
+                            </a>
+                        </p>
                     </div>
                 </div>
             </div>
