feat(styles): menu links)

--- a/index.html
+++ b/index.html
@@ -95,12 +95,13 @@
                                     Consoles
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li><a class="dropdown-item" href="#">Xbox Series X</a></li>
+                                    <li><a class="dropdown-item" href="#">Xbox Series S</a></li>
+                                    <li><a class="dropdown-item" href="#">Xbox One S</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="#">All Consoles</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
