--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown-2" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                     Consoles
                                 </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown-2">
                                     <li><a class="dropdown-item" href="#">Xbox Series X</a></li>
                                     <li><a class="dropdown-item" href="#">Xbox Series S</a></li>
                                     <li><a class="dropdown-item" href="#">Xbox One S</a></li>
@@ -105,13 +105,21 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Community</a>
+                                <a class="nav-link dropdown-toggle " href="#" tabindex="-1" aria-disabled="true">Community</a>
+                            </li>
+                            <li class="nav-item">
+                                <form class="d-flex">
+                                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                                </form>
+                            </li>
+                            <li class="nav-item d-flex align-items-center">
+                                <svg class="user-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M16.6666 6.66668C16.6666 9.08334 15.4167 11.1666 13.5 12.3333C16.8334 13.5 19.3334 16.4167 20 20H18.3333C17.5 16.1666 14.0833 13.3333 10 13.3333C5.9167 13.3333 2.5 16.1667 1.66668 20H0C0.666641 16.5 3.16664 13.5833 6.49996 12.3333C4.5833 11.1667 3.33332 9.08334 3.33332 6.66668C3.33332 3 6.33336 0 10 0C13.6666 0 16.6667 3 16.6666 6.66668ZM10 1.66668C7.25002 1.66668 5 3.9167 5 6.66668C5 9.41666 7.25002 11.6667 10 11.6667C12.75 11.6667 15 9.41666 15 6.66668C15 3.9167 12.75 1.66668 10 1.66668Z" fill="#8DD83D"/>
+                                    </svg>
+                                <a href="#" class="nav-link dropdown-toggle">My XBOX</a>
                             </li>
                         </ul>
-                        <form class="d-flex">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
-                        </form>
+                        
                     </div>
                 </div>
             </nav>
