--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     </p>
 
 
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="section-best__block col-lg-4 col-sm-12">
                         <article class="best-card">
                             <div class="best-card__top">
                                 <figure class="best-card__figure">
@@ -281,7 +281,7 @@
                             </div>
                         </article>
                     </div>
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="section-best__block col-lg-4 col-sm-12">
 
                         <article class="best-card">
                             <div class="best-card__top">
@@ -304,7 +304,7 @@
                         </article>
 
                     </div>
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="section-best__block col-lg-4 col-sm-12">
                         <article class="best-card">
 
                             <div class="best-card__top">
