--- a/index.html
+++ b/index.html
@@ -439,10 +439,10 @@
                             </p>
                             <div class="section-design__button-wrapper d-flex justify-content-between">
                                 <button class="btn btn-gray section-design__btn">
-                                    Design Yours
+                                    Design&nbsp;Yours
                                 </button>
                                 <button class="btn btn-brand section-design__btn section-design__btn_right">
-                                    Explore Consoles &amp;&nbsp;Accessories
+                                    Explore&nbsp;Consoles&nbsp;&amp;&nbsp;Accessories
                                 </button>
                             </div>
                         </div>
@@ -455,7 +455,7 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="footer__top-block col-lg-4 col-sm-12">
+                <div class="footer__top-block footer__top-block_1 col-lg-4 col-md-6 col-sm-12">
                     <div class="footer__top-content">
                         <h3 class="footer__top-title">
                             XBOX
@@ -473,7 +473,7 @@
                             </li>
                             <li class="footer__item">
                                 <a href="#" class="footer__link">
-                                    Privacy &amp;&nbsp;cookies Contact us
+                                    Privacy &amp;&nbsp;cookies 
                                 </a>
                             </li>
                             <li class="footer__item">
@@ -484,7 +484,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="footer__top-block col-lg-4 col-sm-12">
+                <div class="footer__top-block footer__top-block_2 col-lg-4 col-md-6 col-sm-12">
                     <div class="footer__top-content">
                         <h3 class="footer__top-title">
                             Developers
@@ -513,8 +513,8 @@
                         </ul>
                     </div>
                 </div>
-                <div class="footer__top-block col-lg-4 col-sm-12">
-                    <div class="footer__top-content">
+                <div class="footer__top-block footer__top-block_3 col-lg-4 col-md-12">
+                    <div class="footer__top-content footer__top-content_3">
                         <h3 class="footer__top-title">
                             Follow Us
                         </h3>
